Updated for the new year :)

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Jonah Fritz 2018
+        Copyright &copy; Jonah Fritz 2018-2019
       </div>
     </footer>
 
